.assets/css/dark.css
:root {
  --link-color: #6893e0;
  --mark-color: #b8b800;
  --code-color: #df5f51;
  --comment-color: #8e877b;
  --button-border: #736b5f;
  --nav-bar-element-color: #bcb9b3;
  --border-blockquote: #736b5f;
  --spoiler: #05628b;
  --editor-background: rgba(36, 29, 23, 0.6);
  --editor-pre-background: #1b2429;
  --editor-pre-symbol: #d1cfcc;
  --special-red: #d75a30;
  --special-yellow: #e6ba37;
  --special-orange: #d1ac3f;
  --special-green: #4ce685;
  --special-blue: #3fadde;
  --special-dark: #bcb9b3;
  --special-grey: #292d2f;
}

.table {
  color: #bcb9b3;
  border-color: #323739;
}

:not(pre) > code[class*=language-], pre[class*=language-] {
  background: #1b2429 !important;
  text-shadow: none !important;
}
:not(pre) > code[class*=language-] *:not(.token), pre[class*=language-] *:not(.token) {
  color: var(--special-dark) !important;
  text-shadow: none !important;
}
:not(pre) > code[class*=language-] .token, pre[class*=language-] .token {
  text-shadow: none !important;
}
:not(pre) > code[class*=language-] .token.tag, :not(pre) > code[class*=language-] .token.number, pre[class*=language-] .token.tag, pre[class*=language-] .token.number {
  color: #e657a7;
}
:not(pre) > code[class*=language-] .token.punctuation, :not(pre) > code[class*=language-] .token.operator, pre[class*=language-] .token.punctuation, pre[class*=language-] .token.operator {
  color: #979086;
}
:not(pre) > code[class*=language-] .token.operator, :not(pre) > code[class*=language-] .token.named-entity, :not(pre) > code[class*=language-] .token.entity, pre[class*=language-] .token.operator, pre[class*=language-] .token.named-entity, pre[class*=language-] .token.entity {
  background: inherit !important;
}
:not(pre) > code[class*=language-] .token.attr-name, :not(pre) > code[class*=language-] .token.string, pre[class*=language-] .token.attr-name, pre[class*=language-] .token.string {
  color: #b6e657;
}
:not(pre) > code[class*=language-] .token.attr-value, :not(pre) > code[class*=language-] .token.keyword, pre[class*=language-] .token.attr-value, pre[class*=language-] .token.keyword {
  color: #4db8e6;
}
:not(pre) > code[class*=language-] .token.class-name, :not(pre) > code[class*=language-] .token.function, :not(pre) > code[class*=language-] .token.constant, pre[class*=language-] .token.class-name, pre[class*=language-] .token.function, pre[class*=language-] .token.constant {
  color: #c94d66;
}
:not(pre) > code[class*=language-] .token.comment, pre[class*=language-] .token.comment {
  color: #898174;
}

.border-dark {
  border: 1px solid #736b5f !important;
}

.table-striped > tbody > tr:nth-of-type(2n+1) {
  color: var(--special-dark);
}

.sep-both, .sl, .sr {
  background: var(--special-dark);
}

.memorize-button {
  color: var(--special-grey) !important;
}

.text-dark {
  color: #bcb9b3 !important;
}

.editor-toolbar button {
  color: #d1cfcc;
}
.editor-toolbar button.active {
  background-color: #17191a !important;
}

.CodeMirror {
  color: #d1cfcc !important;
}

.sep-both, .sl, .sr {
  color: var(--special-grey);
  background: #161b20 !important;
}

.search-bar {
  background: #d1cfcc !important;
}

input[name=commit-name], textarea[name=commit-desc] {
  color: #bcb9b3 !important;
}

/*# sourceMappingURL=dark.css.map */

